--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/logo/logo_dark.png
     - assets/logo/logo_light.png
     - assets/logo/logo_40.jpg
+    - assets/logo/logo_esse.jpg
     - assets/images/background_light.jpg
     - assets/images/background_dark.jpg
     - assets/images/image_missing.png
