--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,8 @@ flutter:
     - assets/logo/logo_dark.png
     - assets/logo/logo_light.png
     - assets/logo/logo_40.jpg
-    - assets/logo/logo_esse.jpg
+    - assets/logo/logo_assistant.png
+    - assets/logo/logo_files.png
     - assets/images/background_light.jpg
     - assets/images/background_dark.jpg
     - assets/images/image_missing.png
