--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,11 @@ async-fs = "1.5"
 serde = { version = "1", features = ["derive"] }
 postcard = { version = "0.5", default-features = false, features = ["alloc"] }
 sysinfo = "0.16"
-tdn = { git = "https://github.com/cypherlink/TDN", branch="main", default-features = false, features = ["full"] }
-tdn-did = { git = "https://github.com/cypherlink/tdn-did", branch="main" }
-tdn-storage = { git = "https://github.com/cypherlink/tdn-storage", branch="main" }
-# group-chat-types = { git = "https://github.com/cympletech/group-chat", branch="main" }
-group-chat-types = { path = "../group-chat/types" }
+tdn = { version = "0.4", default-features = false, features = ["full"] }
+tdn_did = { git = "https://github.com/cypherlink/tdn_did", branch="main" }
+tdn_storage = { git = "https://github.com/cypherlink/tdn_storage", branch="main" }
+group-chat_types = { git = "https://github.com/cympletech/group-chat", branch="main" }
+#group-chat-types = { path = "../group-chat/types" }
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.19", default-features = false }
