--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ base64 = "0.13"
 sha2 = "0.9"
 blake3 = "0.3"
 aes-gcm = "0.8"
+bincode = "1.3"
 serde = { version = "1", features = ["derive"] }
-postcard = { version = "0.5", default-features = false, features = ["alloc"] }
 sysinfo = "0.16"
 tokio = { version = "1", features = ["full"] }
 tdn = { version = "0.5", default-features = false, features = ["full"] }
