--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   url_launcher: any
   permission_handler: any
   image_picker: any # pick image
-  image_gallery_saver: any # Mobile save image to gallery
+  image_save: any # Mobile save image to gallery
   file_picker: any # pick file
   file_selector: any # pick file
   file_selector_linux:
