fix unused code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ anyhow = "1.0"
 log = "0.4"
 rand = "0.8"
 once_cell = "1.7"
-simplelog = "0.10"
+simplelog = "=0.10.0"
 image = "0.23"
 base64 = "0.13"
 blake3 = "0.3"
