--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,14 +23,15 @@ panic = 'abort'
 anyhow = "1.0"
 log = "0.4"
 rand = "0.8"
-once_cell = "1.7"
-simplelog = "=0.10.0"
+once_cell = "1.8"
+simplelog = "0.11"
 image = "0.23"
 base64 = "0.13"
-blake3 = "0.3"
+sha2 = "0.10"
+blake3 = "1.2"
 bincode = "1.3"
-aes-gcm = "0.8"
-sysinfo = "0.16"
+aes-gcm = "0.9"
+sysinfo = "0.21"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 web3 = { version = "0.17", default-features = false, features = ["http-tls", "signing"] }
