--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ once_cell = "1.8"
 simplelog = "0.11"
 image = "0.23"
 base64 = "0.13"
+hex = "0.4"
 sha2 = "0.10"
 blake3 = "1.2"
 bincode = "1.3"
