--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ group-chat_types = { git = "https://github.com/cympletech/esse_types", branch="m
 domain_types = { git = "https://github.com/cympletech/esse_types", branch="main" }
 #group-chat_types = { path = "../esse_types/group_chat" }
 #domain_types = { path = "../esse_types/domain" }
+openssl = { version = "0.10", features = ["vendored"] } # Add for cross-compile.
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.19", default-features = false }
