--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,7 @@ flutter:
     - assets/logo/logo_40.jpg
     - assets/logo/logo_chat.png
     - assets/logo/logo_assistant.png
-    - assets/logo/logo_group_chat.png
+    - assets/logo/logo_group.png
     - assets/logo/logo_domain.png
     - assets/logo/logo_organization.png
     - assets/logo/logo_cloud.png
