--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,7 @@ flutter:
     - assets/logo/logo_jarvis.png
     - assets/logo/logo_group.png
     - assets/logo/logo_domain.png
-    - assets/logo/logo_organization.png
+    - assets/logo/logo_dao.png
     - assets/logo/logo_cloud.png
     - assets/logo/logo_wallet.png
     - assets/logo/logo_eth.png
