--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,16 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: any #flutter pub run flutter_launcher_icons:main
   flutter_native_splash: any #flutter pub run flutter_native_splash:create
+  msix: any # 1. flutter build windows 2. flutter pub run msix:create
+
+# make windows installer.
+msix_config:
+  display_name: ESSE
+  publisher_display_name: ESSE
+  identity_name: CympleTech.com.ESSE
+  msix_version: 0.5.0.0
+  logo_path: .\assets\logo\desktop_icon.png
+  capabilities: "internetClient,microphone,webcam"
 
 flutter_icons:
   android: "ic_launcher"
