--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ license = "MIT/Apache-2.0"
 
 [workspace]
 members = [
+    "types/primitives",
     "types/chat",
     "types/group",
     "types/dao",
     "types/domain",
     "types/cloud",
-    "types/data"
+    "types/data",
 ]
 
 [lib]
