--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,11 @@ crate-type = ["cdylib", "staticlib"]
 [[bin]]
 name = "esse"
 path = "src/daemon.rs"
+required-features = ["daemon"]
+
+[features]
+default = []
+daemon = ["console-subscriber"]
 
 [profile.release]
 opt-level = 's'
@@ -31,26 +36,26 @@ codegen-units = 1
 panic = 'abort'
 
 [dependencies]
-anyhow = "1.0"
-log = "0.4"
-rand = "0.8"
-once_cell = "1.9"
-simplelog = "0.11"
-image = "0.24"
-base64 = "0.13"
-hex = "0.4"
-sha2 = "0.10"
-argon2 = "0.3"
-blake3 = "1.3"
-bincode = "1.3"
 aes-gcm = "0.9"
+anyhow = "1.0"
+argon2 = "0.3"
+base64 = "0.13"
+bincode = "1.3"
+blake3 = "1.3"
+hex = "0.4"
+image = "0.24"
+log = "0.4"
+once_cell = "1.9"
+rand = "0.8"
+sha2 = "0.10"
+simplelog = "0.11"
 sysinfo = "0.23"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 web3 = { version = "0.18", default-features = false, features = ["http-tls", "signing"] }
 tdn = { version = "0.7", default-features = false, features = ["std"] }
 tdn_did = { version = "0.7" }
-tdn_storage = { git = "https://github.com/cympletech/tdn", branch="main" }
+tdn_storage = { version = "0.7" }
 esse_primitives = { version = "0.1", path = "./types/primitives" }
 chat_types = { version = "0.1", path = "./types/chat" }
 group_types = { version = "0.1", path = "./types/group" }
@@ -60,11 +65,10 @@ dao_types = { version = "0.1", path = "./types/dao" }
 data = { version = "0.1", path = "./types/data" }
 
 openssl = { version = "0.10", features = ["vendored"] } # Add for cross-compile.
-console-subscriber = "0.1" # only use in bin daemon.
+console-subscriber = { version = "0.1", optional = true } # only use in bin daemon.
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.19", default-features = false }
-
 
 # DEBUG patch.
 [patch.crates-io]
@@ -73,3 +77,4 @@ chamomile_types = { git = "https://github.com/cympletech/chamomile" }
 tdn = { git = "https://github.com/cympletech/tdn" }
 tdn_types = { git = "https://github.com/cympletech/tdn" }
 tdn_did = { git = "https://github.com/cympletech/tdn" }
+tdn_storage = { git = "https://github.com/cympletech/tdn" }
