--- a/types/group/Cargo.toml
+++ b/types/group/Cargo.toml
@@ -10,6 +10,6 @@ keywords = ["distributed", "p2p", "group chat", "ESSE"]
 license = "MIT/Apache-2.0"
 
 [dependencies]
-chat_types = { path = "../chat", version = "0.1" }
+esse_primitives = { version = "0.1", path = "../primitives" }
 serde = { version = "1", features = ["derive"] }
-tdn_types = { version = "0.7", default-features = false }
+tdn_types = { version = "0.8", default-features = false }
