--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,18 +43,20 @@ bincode = "1.3"
 blake3 = "1.3"
 hex = "0.4"
 image = "0.24"
-log = "0.4"
 once_cell = "1.9"
 rand = "0.8"
 sha2 = "0.10"
-simplelog = "0.11"
 sysinfo = "0.23"
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["full"] }
-web3 = { version = "0.18", default-features = false, features = ["http-tls", "signing"] }
 tdn = { version = "0.8", default-features = false, features = ["std"] }
 tdn_did = { version = "0.8" }
 tdn_storage = { version = "0.8" }
+tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
+tracing-appender = "0.2"
+tracing-subscriber = "0.3"
+web3 = { version = "0.18", default-features = false, features = ["http-tls", "signing"] }
+
 esse_primitives = { version = "0.1", path = "./types/primitives" }
 group_types = { version = "0.1", path = "./types/group" }
 cloud_types = { version = "0.1", path = "./types/cloud" }
