--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ blake3 = "1.3"
 hex = "0.4"
 image = "0.24"
 once_cell = "1.9"
-rand = "0.8"
+rand_chacha = "0.3"
 sha2 = "0.10"
 sysinfo = "0.23"
 serde = { version = "1", features = ["derive"] }
