--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = esse
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.esse.esse
+PRODUCT_BUNDLE_IDENTIFIER = com.example.esse
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2020 com.esse. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
