--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,28 +16,28 @@ dependencies:
   convert: any
   flutter_localizations: # localizations i18n.
     sdk: flutter
-  flutter_localized_locales: any
-  provider: any # state manager
-  shared_preferences: any
-  path_provider: any
-  url_launcher: any
-  permission_handler: any
-  image_picker: any # pick image
-  image_save: any # Mobile save image to gallery
-  file_picker: any # pick file
-  file_selector: any # pick file
-  open_file: any # open file in mobile.
-  crop: any
-  unorm_dart: any
-  qr_flutter: any
-  qr_code_scanner: any
-  web_socket_channel: any
-  record: any
-  just_audio: any
-  percent_indicator: any
-  bottom_navy_bar: any
-  flutter_quill: any
-  fluttertoast: any
+  flutter_localized_locales: ^2.0.3
+  provider: ^6.0.4 # state manager
+  shared_preferences: ^2.0.15
+  path_provider: ^2.0.11
+  url_launcher: ^6.1.6
+  permission_handler: ^10.2.0
+  image_picker: ^0.8.6 # pick image
+  image_save: ^5.0.0 # Mobile save image to gallery
+  file_picker: ^5.2.2 # pick file
+  file_selector: ^0.9.2+2 # pick file
+  open_filex: ^4.3.1 # open file in mobile.
+  crop: ^0.5.3
+  unorm_dart: ^0.2.0
+  qr_flutter: ^4.0.0
+  qr_code_scanner: ^1.0.1
+  web_socket_channel: ^2.2.0
+  record: ^4.4.3
+  just_audio: ^0.9.30
+  percent_indicator: ^4.2.2
+  bottom_navy_bar: ^6.0.0
+  flutter_quill: ^6.1.5
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +45,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   integration_test:
     sdk: flutter
-  flutter_launcher_icons: any #flutter pub run flutter_launcher_icons:main
-  flutter_native_splash: any #flutter pub run flutter_native_splash:create
-  msix: any # 1. flutter build windows 2. flutter pub run msix:create
+  flutter_launcher_icons: ^0.10.0 #flutter pub run flutter_launcher_icons:main
+  flutter_native_splash: ^2.2.14 #flutter pub run flutter_native_splash:create
+  msix: ^3.7.0 # 1. flutter build windows 2. flutter pub run msix:create
 
 # make windows installer.
 msix_config:
